# DiscordBot

./: .gitignore  logs.py  main.py  pyproject.toml  settings.py
cogs/autoroom/: ___init__.py  cog.py  commands.py  models.py  processing.py
cogs/memes/: cog.py  exceptions.py  services.py
core/: bot.py  checks.py  sql.py
utils/: s3.py
